--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -9,53 +9,77 @@
         </div>
 
         <div class="row mt-5">
+            <!-- Personal Portfolio -->
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-sm">
+                    <img src="../assets/images/perso.png" alt="Personal Portfolio Web App" class="card-img-top">
+                    <div class="card-body">
+                        <h5>Personal Portfolio (Web App)</h5>
+                        <p>Minimalistic personal portfolio. A second version is in progress.</p>
+                        <p><strong>Role:</strong> Developer</p>
+                        <p><strong>Languages:</strong> JavaScript, NodeJS, ExpressJS, Express Generator</p>
+                    </div>
+                </div>
+            </div>
             <!-- Kiruwear App -->
             <div class="col-md-4 mb-4">
                 <div class="card shadow-sm">
                     <img src="../assets/images/kiru.png" alt="Kiruwear App" class="card-img-top">
                     <div class="card-body">
                         <h5>Kiruwear App (Mobile App)</h5>
-                        <p>Remote wear control GET to prevent unplanned downtime for P&H4100XPC cable shovels. Awarded the 2021 Digital Transformation at Cerro Verde Mine.</p>
+                        <p>Remote wear control app to prevent unplanned downtime for P&H4100XPC cable shovels. This was awarded the 2021 Digital Transformation at Cerro Verde Mine.</p>
                         <p><strong>Role:</strong> Manager and Creator</p>
                         <p><strong>Languages:</strong> Flutter, PHP Codeigniter</p>
                     </div>
                     <!-- Award Recognition -->
                     <div class="card-footer bg-light text-center">
                         <img src="../assets/images/tech_award.jpg" alt="Kiruwear App Award" class="award-img" style="width: 20%; transition: transform 0.3s;">
-                        <span class="ml-3">For this innovation, I was honored with a prestigious Global Technology Award from the company I collaborated with.</span>
+                        <span class="ml-3">For this innovation, I received a prestigious Global Technology Award from the company I collaborated with.</span>
                     </div>
                 </div>
             </div>
-
-            <!-- Recipes Web App -->
+            <!-- Colombia -->
             <div class="col-md-4 mb-4">
                 <div class="card shadow-sm">
-                    <img src="../assets/images/reci.png" alt="Recipes Web App" class="card-img-top">
+                    <img src="../assets/images/dragline.jpg" alt="03 Aquadigger Hoe Bucket rebuild Aleman Zubieta Dredge" class="card-img-top">
                     <div class="card-body">
-                        <h5>Recipes (Web App)</h5>
-                        <p>An interactive platform for sharing recipes. First version in progress.</p>
-                        <p><strong>Role:</strong> Developer</p>
-                        <p><strong>Languages:</strong> Python, Flask, MySQL</p>
+                        <h5>Assembly Dragline Bucket</h5>
+                        <p>Assembled 115CY Profill Bucket in 20 days.</p>
+                        <p><strong>Role:</strong> Lead Supervisor</p>
+                        <p><strong>Customer:</strong> Drummond mine - Colombia (2014)</p>
                     </div>
                 </div>
             </div>
-
-            <!-- Personal Portfolio -->
+            <!-- Panama -->
             <div class="col-md-4 mb-4">
                 <div class="card shadow-sm">
-                    <img src="../assets/images/perso.png"" alt="Personal Portfolio Web App" class="card-img-top">
+                    <img src="../assets/images/bucket_panama.png" alt="03 Aquadigger Hoe Bucket rebuild Aleman Zubieta Dredge" class="card-img-top">
                     <div class="card-body">
-                        <h5>Personal Portfolio (Web App)</h5>
-                        <p>Minimalistic personal portfolio. Second version in progress.</p>
-                        <p><strong>Role:</strong> Developer</p>
-                        <p><strong>Languages:</strong> JavaScript, NodeJS, ExpressJS, Express Generator</p>
+                        <h5>Rebuild for Manufacturer Warranty</h5>
+                        <p>03 Aquadigger Hoe Bucket rebuilt for Aleman Zubieta Dredge - Dredging for the Culebra Cut Expansion Project.</p>
+                        <p><strong>Role:</strong> Lead Supervisor</p>
+                        <p><strong>Customer:</strong> Autoridad del Canal de Panama (2013-2014)</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Peru -->
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-sm">
+                    <img src="../assets/images/ant_cable.jpg" alt="03 Aquadigger Hoe Bucket rebuild Aleman Zubieta Dredge" class="card-img-top">
+                    <div class="card-body">
+                        <h5>Six Sigma Project</h5>
+                        <p>Decreased cable shovel downtime from GET issues from 30 hours to 5 hours per month.</p>
+                        <p><strong>Role:</strong> Supervisor</p>
+                        <p><strong>Customer:</strong> Antamina Mine - Peru (2010)</p>
+                    </div>
+                    <div class="card-footer bg-light text-center">
+                        <img src="../assets/images/Antamina_certificated.png" alt="Kiruwear App Award" class="award-img" style="width: 20%; transition: transform 0.3s;">
+                        <span class="ml-3">For this innovation, I was honored with a prestigious certification by the customer I collaborated with.</span>
                     </div>
                 </div>
             </div>
         </div>
-        <br>
     </main>
-
 </div>
 
 <%-include ('partials/bottom_nav.ejs')%>
